--- a/project/templates/news.html
+++ b/project/templates/news.html
@@ -1,6 +1,7 @@
 <!--  наследуемся от шаблона default.html, который мы создавали для flatpages -->
 {% extends 'flatpages/default.html' %}
-{% load custom_filters %}
+
+{% load custom_filter %}
 <!-- Название у нас будет posts -->
 {% block title %}
 posts
