--- a/project/templates/products.html
+++ b/project/templates/products.html
@@ -1,6 +1,9 @@
 {% extends 'flatpages/default.html' %}
 
 {% load custom_filters %}
+
+{# Импортируем модуль с нашим тегом #}
+
 {% load custom_tags %}
 
 {% block title %}
@@ -9,18 +12,20 @@ Products
 
 {% block content %}
    <h1>Все товары</h1>
-   <!-- Используем переданную из представления переменную time_now
-   и применяем к ней фильтр date. По назначению этот фильтр очень похож
-   на метод strftime у объекта datetime в Python — вывод времени
-   в указанном формате. -->
-   <h5>{{ time_now|date:'M d Y' }}</h5>
 
-    <h5>{% current_time '%b %d %Y' %}</h5>
+   {# Добавляем форму, которая объединяет набор полей, которые будут отправляться в запросе #}
+   <form action="" method="get">
+       {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}
+       {{ filterset.form.as_p }}
+       {# Добавим кнопку отправки данных формы #}
+       <input type="submit" value="Найти" />
+   </form>
+
    <hr>
    {% if products %}
        <table width="100%">
            <tr>
-               <td align="left">Название</td>
+               <td align="100%">Название</td>
                <td>Описание</td>
                <td>Категория</td>
                <td>Цена</td>
@@ -29,10 +34,10 @@ Products
 
            {% for product in products %}
            <tr>
-               <td align="left">{{ product.name }}</td>
-               <td>{{ product.description|truncatewords:2 }}</td>
+               <td align="100%">{{ product.name }}</td>
+               <td>{{ product.description|truncatechars:15 }}</td>
                <td>{{ product.category.name }}</td>
-               <td>{{ product.price|currency:"usd" }}</td>
+               <td>{{ product.price|currency }}</td>
                <td>{{ product.quantity }}</td>
            </tr>
            {% endfor %}
@@ -41,4 +46,24 @@ Products
    {% else %}
        <h2>Товаров нет!</h2>
    {% endif %}
+
+   {% if page_obj.has_previous %}
+       {# Для каждой ссылки пагинации указываем обработку через новый тег #}
+       <a href="?{% url_replace page=1 %}">1</a>
+       {% if page_obj.previous_page_number != 1 %}
+           ...
+           <a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
+       {% endif %}
+   {% endif %}
+
+   {{ page_obj.number }}
+
+   {% if page_obj.has_next %}
+       <a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
+       {% if paginator.num_pages != page_obj.next_page_number %}
+           ...
+           <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
+       {% endif %}
+   {% endif %}
+
 {% endblock content %}
