--- a/project/templates/flatpages/default.html
+++ b/project/templates/flatpages/default.html
@@ -27,6 +27,10 @@
                    <a class="nav-link" href="/products/">Товары</a>
                </li>
                <li class="nav-item">
+                   <a class="nav-link" href="/products/create/">Создать</a>
+               </li>
+
+               <li class="nav-item">
                    <a class="nav-link" href="/news/">Новости</a>
                </li>
                <li class="nav-item">
